--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header_top">
             <div class="header_logos">
-                <img src="Img/logo.svg" alt="Image logos SunnySide">
+                <a href="/index.html"><img src="Img/logo.svg" alt="Image logos SunnySide"></a>
             </div>
             <nav class="nav">
                 <a href="">about</a>
@@ -22,8 +22,46 @@
         </div>
         <div class="header_bas">
             <h1><span>we are</span> creatives</h1>
-            <img src="Img/icon-arrow-down.svg" alt="La flèche base">
+            <a href="/index.html"><img src="Img/icon-arrow-down.svg" alt="La flèche base"></a>
         </div>
     </header>
+    <section class="section">
+        <div class="section_services">
+            <div class="section_services_infos">
+                <h2><span>Transform yours</span> brand</h2>
+                <p>
+                    we are a full-service creative agency specializing in helping brands grow fast. Engage your clients through
+                    compelling visuals that do most of the marketing for you. 
+                </p>
+                <a href="">learn more</a>
+            </div>
+            <div class="section_services_oeuf">
+            </div>
+            <div class="section_services_stand-out">
+            </div>
+            <div class="section_services_infos last">
+                <h2><span>Stand out to the right</span> audience</h2>
+                <p>
+                    Using a collaborative formula of designers. 
+                    researchers, photographers, videographers and copywriters, we'll bulid and extend your brand in digital places. 
+                </p>
+                <a href="">learn more</a>
+            </div>
+            <div class="section_services_graphic-design">
+                <h2>Graphic Design</h2>
+                <p>
+                    Great design makes you memorable. We deliver artwork that underscores you brand message and 
+                    captures potential clients attention
+                </p>
+            </div>
+            <div class="section_services_photography">
+                <h2>Photography</h2>
+                <p>
+                    Increase your credibility by getting the most stunning, high-quality photos that 
+                    improve your business image. 
+                </p>
+            </div>
+        </div> 
+    </section> 
 </body>
 </html>
