Ajout partie testimonials

--- a/index.html
+++ b/index.html
@@ -62,6 +62,35 @@
                 </p>
             </div>
         </div> 
+        <div class="section_testimonials">
+            <h2>clients testimonials</h2>
+            <div class="testimonial-client">
+                <div class="client-emily">
+                    <img src="Img/image-emily.jpg" alt="madame Emily">
+                    <p class="message">
+                        we put trust in Sunnyside and they delivered, marking sure our needs were met and deadlines were always hit.
+                    </p>
+                    <h3>Emily R.</h3>
+                    <p class="role">Marketing Director</p>
+                </div>
+                <div class="client-thomas">
+                    <img src="Img/image-thomas.jpg" alt="monsieur Thoams">
+                    <p class="message">
+                        Sunnyide's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience
+                    </p>
+                    <h3>Thomas S.</h3>
+                    <p class="role">Chef Operating</p>
+                </div>
+                <div class="client-jennie">
+                    <img src="Img/image-jennie.jpg" alt="madame Jennie">
+                    <p class="message">
+                        Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+                    </p>
+                    <h3>Jennie F.</h3>
+                    <p class="role">Business Owner</p>
+                </div>
+            </div>
+        </div>
     </section> 
 </body>
 </html>
