Ajout de la section produit

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                 </div>
             </div>
         </div>
+        <div class="section_produits">
+            <img src="Img/image-gallery-milkbottles.jpg" alt="image milk">
+            <img src="Img/image-gallery-orange.jpg" alt="image orange">
+            <img src="Img/image-gallery-cone.jpg" alt="Image corne">
+            <img src="Img/image-gallery-sugarcubes.jpg" alt="Image sugar">
+        </div>
     </section> 
 </body>
 </html>
