Ajout de la partie footer

--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
             <img src="Img/image-gallery-cone.jpg" alt="Image corne">
             <img src="Img/image-gallery-sugarcubes.jpg" alt="Image sugar">
         </div>
-    </section> 
+    </section>
+    <footer class="footer">
+        <div class="footer-centered">
+            <img src="/Img/logo2.svg" alt="logo2">
+            <nav class="footer-nav">
+                <a href="">About</a>
+                <a href="" class="active">Services</a>
+                <a href="">Projects</a>
+            </nav>
+            <div class="footer-social">
+                <a href="" title="Facebook"><img src="Img/icon-facebook.svg" alt="Facebook"></a>
+                <a href="" title="Instagram"><img src="Img/icon-instagram.svg" alt="Instagram"></a>
+                <a href="" title="Twitter"><img src="Img/icon-twitter.svg" alt="Twitter"></a>
+                <a href="" title="Pinterest"><img src="Img/icon-pinterest.svg" alt="Pinterest"></a>
+            </div>
+        </div>
+    </footer> 
 </body>
 </html>
