--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
     <footer class="footer">
         <div class="footer-centered">
-            <img src="/Img/logo2.svg" alt="logo2">
+            <img src="Img/logo2.svg" alt="logo2">
             <nav class="footer-nav">
                 <a href="">About</a>
                 <a href="" class="active">Services</a>
